--- a/app/src/main/res/values-it/chat_main_menu.xml
+++ b/app/src/main/res/values-it/chat_main_menu.xml
@@ -3,7 +3,7 @@
     <string name="text_profile_title">Profilo</string>
     <string name="text_security_settings_title">Sicurezza</string>
     <string name="text_appearance_settings_title">Aspetto</string>
-    <string name="text_preview_background_chat_title">Vista previa fondo de chat</string>
+    <string name="text_preview_background_chat_title">Anteprima sfondo chat</string>
     <string name="text_invite_someone_title">Invita qualcuno</string>
     <string name="text_help_title">Aiuto</string>
     <string name="text_subscription_title">Sottoscrizione</string>
