--- a/app/src/main/res/values-fr/register.xml
+++ b/app/src/main/res/values-fr/register.xml
@@ -8,5 +8,5 @@
     <string name="text_nickname_contain_at_least_one_number">Il doit contenir au moins un numéro</string>
     <string name="text_nickname_not_contain_enough_char_and_number">Le pseudo doit contenir au moins 3 caractères et 1 chiffre</string>
     <string name="text_nickname_contain_at_least_one_letter">Le pseudo ne doit contenir au moins une lettre</string>
-    <string name="text_only_start_letter">Le pseudo doit commencer par une lettre</string>
+    <string name="text_nickname_must_begin_with_a_letter">Le pseudo doit commencer par une lettre</string>
 </resources>
