--- a/app/src/main/res/values-pt/general.xml
+++ b/app/src/main/res/values-pt/general.xml
@@ -3,13 +3,10 @@
     <string name="text_accept">Aceitar</string>
     <string name="text_cancel">Cancelar</string>
     <string name="text_continue">Continuar</string>
-    <string name="text_welcome">Bem-vindo</string>
     <string name="text_next">Seguinte</string>
     <string name="text_fail">Ocorreu um erro. Tente novamente</string>
     <string name="text_name">Primeiro nome</string>
     <string name="text_nickname_with_asterisk">Apelido*</string>
-    <string name="text_status">Estado</string>
-    <string name="text_blocked_contacts">Contatos bloqueados</string>
     <string name="label_edit_photo">Editar foto</string>
     <string name="label_edit_cover">Editar banner</string>
     <string name="text_edit">Editar</string>
@@ -17,14 +14,6 @@
     <string name="text_search">Pesquisar</string>
     <string name="text_add_contact">Adicionar contato</string>
     <string name="text_finish">Concluir</string>
-    <string name="text_gallery">Galeria</string>
-    <string name="text_camera">Câmera</string>
-    <string name="text_location">Localização</string>
-    <string name="text_audio">Áudio</string>
-    <string name="text_video">Video</string>
-    <string name="text_photo">Foto</string>
-    <string name="text_gif">Gif</string>
-    <string name="text_document">Documento</string>
     <string name="text_error_connection">Não há conexão com a internet. Tente novamente mais tarde</string>
     <string name="text_register">Registre-se</string>
     <string name="text_answer">Resposta</string>
@@ -37,8 +26,6 @@
     <string name="text_title_delete_conversation">Eliminar conversación</string>
     <string name="text_mute_conversation">Silenciar conversa</string>
     <string name="text_unmuted_conversation">Conversa não silenciosa</string>
-    <string name="text_block_contact">Bloquear contato</string>
-    <string name="text_unblock_contact">Desbloquear contato</string>
     <string name="text_field_cannot_be_empty">O campo não pode estar vazio</string>
     <string name="text_send_to">Enviar para %1$s</string>
     <string name="text_error_playing_audio">Ocorreu um erro ao áudio jogo</string>
@@ -62,26 +49,60 @@
     <string name="text_yesterday">Ontem</string>
     <string name="text_close">Perto</string>
     <string name="text_confirm">Confirm</string>
-    <string name="text_hang_up_call">Desligar</string>
-    <string name="text_answer_call">Responda</string>
     <string name="text_update_title">Uma nova versão de Napoleão está disponível</string>
     <string name="text_update_message">Version %1$s já está disponível na Play Store</string>
     <string name="text_update">Atualizar</string>
     <string name="text_explanation_camera_to_receive_calls">NapoleoN precisa de acesso à câmera e microfone para fazer e receber chamadas</string>
-    <string name="text_twentyfour_hours">24 horas</string>
     <string name="text_access">ACESSO</string>
     <string name="text_yes">Sim</string>
     <string name="text_no">Não</string>
     <string name="text_empty_state_search_contacts">Sua busca não gerou resultados</string>
-    <string name="text_contact">CONTATO</string>
     <string name="text_error_updating_language">Ocorreu um erro ao mudar de idioma, por favor tente novamente</string>
-    <string name="text_emptystate_search_friends_title">Procurar seus amigos pelo apelido e comunicar</string>
-    <string name="text_date_today">Hoje</string>
     <string name="text_title_attach_doc">Documento adjunto</string>
     <string name="text_attch_doc_not_allowed">O arquivo selecionado não é permitido</string>
     <string name="text_attch_doc_size_exceed">O ficheiro seleccionado, excede o tamanho permitido (100MB)</string>
     <string name="text_reject">Recusar</string>
     <string name="text_count_messages">Postagens</string>
     <string name="text_sending_file">Envio de arquivo</string>
+    <string name="text_sending_file_multiple">Enviando vários arquivos</string>
+    <string name="text_downloading_file">Baixar arquivos</string>
+    <string name="text_downloading_file_multiple">Faça o download de vários arquivos</string>
     <string name="text_activated">ativado</string>
+    <string name="msg_not_connection">Você deve ter uma conexão para este processo</string>
+
+    <!--    Landing-->
+    <string name="text_welcome">Bem-vindo</string>
+
+    <!--    Profile-->
+    <string name="text_status">Estado</string>
+    <string name="text_blocked_contacts">Contatos bloqueados</string>
+
+    <!--    menu Attachment-->
+    <string name="text_gallery">Galeria</string>
+    <string name="text_camera">Câmera</string>
+    <string name="text_location">Localização</string>
+    <string name="text_audio">Áudio</string>
+    <string name="text_video">Video</string>
+    <string name="text_photo">Foto</string>
+    <string name="text_gif">Gif</string>
+    <string name="text_document">Documento</string>
+
+    <!--    Contacts-->
+    <string name="text_block_contact">Bloquear contato</string>
+    <string name="text_unblock_contact">Desbloquear contato</string>
+
+    <!--    Conversation -->
+    <string name="text_hang_up_call">Desligar</string>
+    <string name="text_answer_call">Responda</string>
+    <string name="text_date_today">Hoje</string>
+
+    <!--    Time format-->
+    <string name="text_twentyfour_hours">24 horas</string>
+
+    <!--    Contact-->
+    <string name="text_contact">CONTATO</string>
+
+    <!--    Empty State-->
+    <string name="text_emptystate_search_friends_title">Procurar seus amigos pelo apelido e comunicar</string>
+
 </resources>
