--- a/app/src/main/res/values-pt/register.xml
+++ b/app/src/main/res/values-pt/register.xml
@@ -8,5 +8,5 @@
     <string name="text_nickname_contain_at_least_one_number">Ele deve conter pelo menos um número</string>
     <string name="text_nickname_not_contain_enough_char_and_number">O apelido deve conter pelo menos 3 caracteres e 1 número</string>
     <string name="text_nickname_contain_at_least_one_letter">O apelido deve conter no uma letra menos</string>
-    <string name="text_only_start_letter">O apelido deve começar com uma letra</string>
+    <string name="text_nickname_must_begin_with_a_letter">O apelido deve começar com uma letra</string>
 </resources>
