--- a/app/src/main/res/layout/view_attachment_preview_bottom_tab_layout.xml
+++ b/app/src/main/res/layout/view_attachment_preview_bottom_tab_layout.xml
@@ -9,23 +9,36 @@
     android:paddingTop="@dimen/large_padding"
     android:paddingBottom="@dimen/small_margin">
 
-    <TextView
-        android:id="@+id/text_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:id="@+id/scroll_text"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
         android:layout_marginStart="@dimen/small_margin"
         android:layout_marginEnd="@dimen/small_margin"
         android:layout_marginBottom="@dimen/small_margin"
-        android:ellipsize="end"
-        android:maxLines="3"
-        android:textAppearance="@style/SmallBodyTextView"
-        android:textColor="@color/white"
-        android:textSize="@dimen/minor_text_size"
+        android:fillViewport="false"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Este es un mensaje de prueba Este es un mensaje de prueba Este es un mensaje de prueba Este es un mensaje de prueba Este es un mensaje de prueba Este es un mensaje de prueba"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_message"
+                style="@style/MyMessageTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/white"
+                tools:text="Hola juank"
+                tools:visibility="visible" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout_files"
@@ -36,7 +49,7 @@
         app:layout_constraintBottom_toTopOf="@id/button_send"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_message"
+        app:layout_constraintTop_toBottomOf="@id/scroll_text"
         app:tabIndicator="@null"
         app:tabMode="scrollable"
         app:tabRippleColor="@android:color/holo_orange_light" />
@@ -56,10 +69,10 @@
     <EditText
         android:id="@+id/edit_text_message"
         android:layout_width="0dp"
-        android:textColor="@color/white"
         android:layout_height="wrap_content"
-        android:maxLines="2"
         android:layout_margin="@dimen/small_margin"
+        android:maxLines="2"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_send"
         app:layout_constraintStart_toStartOf="parent" />
