--- a/app/src/main/res/values-es/general.xml
+++ b/app/src/main/res/values-es/general.xml
@@ -9,7 +9,7 @@
     <string name="text_edit">Editar</string>
     <string name="text_error_connection">No hay conexión a internet. Inténte más tarde</string>
     <string name="text_welcome">Bienvenido</string>
-    <string name="text_fail">Algo ha salido mal, por favor inténte nuevamente</string>
+    <string name="text_fail">Algo ha salido mal, por favor intente nuevamente</string>
     <string name="text_status">Estado</string>
     <string name="text_blocked_contacts">Contactos bloqueados</string>
     <string name="label_edit_photo">Editar foto</string>
@@ -66,7 +66,7 @@
     <string name="text_update_title">Una nueva versión de Napoleón está disponible</string>
     <string name="text_update_message">La versión %1$s ahora está disponible en la Play Store</string>
     <string name="text_update">Actualizar</string>
-    <string name="text_explanation_camera_to_receive_calls">NapoleoN necesita aceso a la cámara y micrófono para hacer y recibir llamadas</string>
+    <string name="text_explanation_camera_to_receive_calls">NapoleoN necesita acceso a la cámara y micrófono para hacer y recibir llamadas</string>
     <string name="text_twentyfour_hours">24 horas</string>
     <string name="text_access">ACCESO</string>
     <string name="text_yes">Si</string>
@@ -82,6 +82,6 @@
     <string name="text_reject">Rechazar</string>
     <string name="text_count_messages">Mensajes</string>
     <string name="text_sending_file">Enviando archivo</string>
-    <string name="text_sending_file_multiple">Enviando multiples archivos</string>
-    <string name="text_activated">activado</string>
+    <string name="text_sending_file_multiple">Enviando múltiples archivos</string>
+    <string name="text_activated">Activado</string>
 </resources>
