- (RESUELVE) se marca como visto la primera imagen del collage aun cuando esta no ha sido vista.

--- a/app/src/main/res/layout/fragment_multiple_attachment_preview_image.xml
+++ b/app/src/main/res/layout/fragment_multiple_attachment_preview_image.xml
@@ -20,13 +20,13 @@
         style="@style/TextCountDownSelfDestruct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/xx_large_margin"
         android:layout_marginEnd="@dimen/normal_margin"
         android:padding="@dimen/x_small_padding"
         android:text="12:12"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/frame_status"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/frame_status"
         tools:visibility="visible" />
 
     <FrameLayout
@@ -34,11 +34,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small_margin"
+        android:layout_marginTop="@dimen/xx_large_margin"
         android:background="@drawable/bg_black_transparent_circle"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/text_time_autodestruction"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/text_time_autodestruction"
+        app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible">
 
         <androidx.appcompat.widget.AppCompatImageView
