--- a/app/src/main/res/values-fr/chat_main_menu.xml
+++ b/app/src/main/res/values-fr/chat_main_menu.xml
@@ -6,5 +6,5 @@
     <string name="text_preview_background_chat_title">Aperçu de l\'arrière-plan du chat</string>
     <string name="text_invite_someone_title">Inviter quelqu\'un</string>
     <string name="text_help_title">L\'aide</string>
-    <string name="text_subscription_title">Abonnement</string>
+    <string name="text_subscription_title">Mon compte</string>
 </resources>
