--- a/app/src/main/res/menu/main_chat_menu.xml
+++ b/app/src/main/res/menu/main_chat_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <!--TODO:Subscription-->
-    <!--<item
+
+    <item
         android:id="@+id/subscription"
         android:title="@null"
         app:actionLayout="@layout/drawer_menu_item_subscription"
-        tools:title="@string/text_subscription_title" />-->
+        tools:title="@string/text_subscription_title" />
 
     <item
         android:id="@+id/security_settings"
