--- a/app/src/main/res/values-de/chat_main_menu.xml
+++ b/app/src/main/res/values-de/chat_main_menu.xml
@@ -6,5 +6,5 @@
     <string name="text_preview_background_chat_title">Chat Hintergrund Vorschau</string>
     <string name="text_invite_someone_title">Jemanden einladen</string>
     <string name="text_help_title">Hilfe</string>
-    <string name="text_subscription_title">Abonnement</string>
+    <string name="text_subscription_title">Mein Konto</string>
 </resources>
