--- a/app/src/main/res/values-es/subscription.xml
+++ b/app/src/main/res/values-es/subscription.xml
@@ -30,4 +30,6 @@
     <string name="text_operation_cancelled">Operación cancelada.</string>
     <string name="text_subscription_error">¡Se ha presentado un error! Inténtalo más tarde.</string>
     <string name="text_subscription_expired">Tu suscripción expiro, solo podrás recibir mensajes.</string>
+    <string name="text_subscription_free_trial_fourth_day">Disfruta de la privacidad real, gestiona tu cuenta.</string>
+    <string name="text_subscription_partial_lock">¿Ocurrió algo? gestiona tu cuenta</string>
 </resources>
