--- a/app/src/main/res/values-pt/chat_main_menu.xml
+++ b/app/src/main/res/values-pt/chat_main_menu.xml
@@ -6,5 +6,5 @@
     <string name="text_preview_background_chat_title">Antevisão do fundo do chat</string>
     <string name="text_invite_someone_title">Convide alguém</string>
     <string name="text_help_title">Ajuda</string>
-    <string name="text_subscription_title">Inscrição</string>
+    <string name="text_subscription_title">Minha Conta</string>
 </resources>
