--- a/app/src/main/res/values/chat_main_menu.xml
+++ b/app/src/main/res/values/chat_main_menu.xml
@@ -6,5 +6,5 @@
     <string name="text_preview_background_chat_title">Chat background preview</string>
     <string name="text_invite_someone_title">Invite Someone</string>
     <string name="text_help_title">Help</string>
-    <string name="text_subscription_title">Subscription</string>
+    <string name="text_subscription_title">My Account</string>
 </resources>
