--- a/app/src/main/res/values/subscription.xml
+++ b/app/src/main/res/values/subscription.xml
@@ -32,7 +32,10 @@
     <string name="text_subscription_expired">Your subscription expired, you will only receive messages.</string>
     <string name="text_subscription_free_trial_fourth_day">Enjoy real privacy, manage your account.</string>
     <string name="text_subscription_partial_lock">Did anything happen? manage your account</string>
-    <string name="buy_subscription_url" translatable="false">https://qa.napoleon-chat.com/buysubscription</string>
+    <string name="buy_subscription_url" translatable="false">https://qa.napoleon-chat.com/buysubscription/%s</string>
+    <string name="text_total_lock_dialog_title">Account suspended</string>
+    <string name="text_total_lock_dialog_desc">Keep your same user and enjoy the benefits that NapoleoИ chat gives you by managing your account</string>
+    <string name="text_total_lock_dialog_action">Go</string>
 </resources>
 
 
